# Endpoint-State-Policy

./: .dockerignore  .env.dev  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
esp_compiler/: .gitignore  Cargo.toml  README.md  build.rs
esp_compiler/esp/: lexical_invalid_tokens.esp  mitre.esp  performance_large.esp  reference_undefined_states.esp  reference_undefined_variables.esp  semantic_test.esp  smoke_test.esp  special_characters.esp  structural_large_symbol_count.esp  sudo_priv_check.esp  symbol_empty_blocks.esp  symbol_reserved_keywords.esp  syntax_missing_def_end.esp  valid_comprehensive.esp  valid_edge_cases.esp  valid_minimal.esp
esp_compiler/src/: batch.rs  lib.rs  main.rs
esp_compiler/src/config/: constants.rs  mod.rs  runtime.rs
esp_compiler/src/file_processor/: mod.rs  processor.rs
esp_compiler/src/grammar/: keywords.rs  mod.rs
esp_compiler/src/lexical/: analyzer.rs  mod.rs
esp_compiler/src/logging/: codes.rs  collector.rs  config.rs  events.rs  macros.rs  mod.rs  service.rs
esp_compiler/src/pipeline/: error.rs  info.rs  mod.rs  output.rs  result.rs  stats.rs  validation.rs
esp_compiler/src/reference_resolution/: error.rs  mod.rs  types.rs
esp_compiler/src/semantic_analysis/: cycle_analyzer.rs  mod.rs  runtime_checker.rs  set_checker.rs  type_checker.rs  types.rs
esp_compiler/src/symbols/: collector.rs  error.rs  mod.rs  table.rs
esp_compiler/src/syntax/: error.rs  mod.rs  parser.rs
esp_compiler/src/tokens/: mod.rs  token.rs  token_stream.rs
esp_compiler/src/utils/: mod.rs  span.rs
esp_compiler/src/validation/: error.rs  limits.rs  mod.rs  ordering.rs  requirements.rs  types.rs
esp_scanner_base/: Cargo.toml  README.md
esp_scanner_base/esp/: complex_logic_tree.esp  critical_file_permissions.esp  missing_file_handling.esp  passwd_shadow_content.esp  set_test.esp  ssh_config_check.esp  test_behavior.esp  test_entity_check.esp
esp_scanner_base/src/: lib.rs  main.rs
esp_scanner_base/src/api/: config.rs  errors.rs  mod.rs  processor.rs  scanner.rs
esp_scanner_base/src/execution/: behavior.rs  comparisons.rs  deferred_ops.rs  engine.rs  entity_check.rs  filter_evaluation.rs  helpers.rs  mod.rs  module_version.rs  record_validation.rs  structured_params.rs
esp_scanner_base/src/ffi/: bindings.rs  common.rs  execution.rs  logging.rs  mod.rs  parsing.rs  types.rs
esp_scanner_base/src/parser/: mod.rs
esp_scanner_base/src/resolution/: dag.rs  engine.rs  error.rs  field_resolver.rs  mod.rs  runtime_operations.rs  set_expansion.rs  set_operations.rs  symbol_parser.rs  validation.rs
esp_scanner_base/src/results/: error.rs  generator.rs  mod.rs  types.rs
esp_scanner_base/src/scanner/: mod.rs
esp_scanner_base/src/strategies/: command_executor.rs  ctn_contract.rs  errors.rs  mod.rs  registry.rs  traits.rs  validation.rs
esp_scanner_base/src/types/: common.rs  criteria.rs  criterion.rs  error.rs  execution_context.rs  field_path_extensions.rs  filter.rs  metadata.rs  mod.rs  object.rs  operators.rs  record_traits.rs  resolution_context.rs  runtime_operation.rs  set.rs  state.rs  test.rs  variable.rs
esp_scanner_sdk/: Cargo.toml  README.md  scan_result.json
esp_scanner_sdk/esp/: ENTR-ID-000440.esp  boundary_integers.esp  complex_logic_tree.esp  criteria_block_missing.esp  critical_file_permissions.esp  empty_strings.esp  lexical_unclosed_strings.esp  missing_file_handling.esp  reference_local_scope_violation.esp  set_test.esp  smoke_test2.esp  structural_deep_nesting.esp  syntax_wrong_block_order.esp  test_behavior.esp  test_behavior2.esp  test_behavior3.esp  test_deferred_run_ops.esp  test_entity_check.esp  test_filters.esp  test_record_wildcard.esp  test_recursive_behavior.esp  variable_usage.esp
esp_scanner_sdk/src/: lib.rs  main.rs
esp_scanner_sdk/src/collectors/: command.rs  computed_values.rs  filesystem.rs  mod.rs
(+81 files in other folders)
