[workspace]
resolver = "2"
members = [
    "esp_compiler",
    "esp_scanner_base",
    "esp_scanner_sdk",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Curtis Slone <curtis@scanset.io>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/CurtisSlone/Endpoint-State-Policy"
homepage = "https://github.com/CurtisSlone/Endpoint-State-Policy"

[workspace.dependencies]
# Shared dependencies across workspace
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# Workspace-internal dependencies
esp_compiler = { path = "esp_compiler" }
esp_scanner_base = { path = "esp_scanner_base" }

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
incremental = true

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "off"
debug-assertions = false
overflow-checks = false
lto = "thin"
incremental = false
codegen-units = 16
strip = "symbols"

[profile.release-with-debug]
inherits = "release"
debug = true
strip = "none"

[profile.test]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true

# Security-focused build profile
[profile.security]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
