[package]
name = "esp_compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ESP compiler for scanner SDK integration"

[dependencies]
# Use workspace dependencies
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
chrono.workspace = true

[build-dependencies]
toml.workspace = true
serde.workspace = true

[dev-dependencies]
tempfile = "3.0"
assert_matches = "1.5"

[features]
default = []

[lib]
name = "esp_compiler"
path = "src/lib.rs"
