[package]
name = "esp_scanner_base"
version = "0.1.0"
edition = "2021"
authors = ["ESP Team"]
description = "ESP scanner base"
license.workspace = true
keywords = ["esp", "Endpoint State Policy", "scanner"]

[lib]
name = "esp_scanner_base"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "scanner"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
# Workspace dependency on esp_compiler
esp_compiler.workspace = true

# Use workspace dependencies where applicable
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true

# Additional dependencies specific to scanner SDK
regex = "1.0"
hostname = "0.3"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.21"

# Optional logging integration
log = { version = "0.4", optional = true }

# CLI dependencies (optional)
clap = { version = "4.4", features = ["derive"], optional = true }
num_cpus = { version = "1.16", optional = true }
wait-timeout = "0.2"
walkdir = "2"

[dev-dependencies]
tempfile = "3.0"
criterion = "0.5"

[features]
default = ["cli"]
logging = ["log"]
validation = []
cli = ["clap", "num_cpus"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
