[package]
name = "esp_scanner_sdk"
version.workspace = true
edition.workspace = true
authors = ["ESP Team"]
description = "ESP scanner CLI application"
license.workspace = true

[[bin]]
name = "scanner"
path = "src/main.rs"

[dependencies]
# Depends on esp_scanner_base (which transitively gets esp_compiler)
esp_scanner_base.workspace = true
esp_compiler.workspace = true

# CLI-specific dependencies
clap = { version = "4.4", features = ["derive"] }
num_cpus = "1.16"
log = "0.4"
env_logger = "0.11"

# Any other dependencies needed for the binary
serde.workspace = true
serde_json.workspace = true
